1994 [Log] added timestamp to some log items
1993 [Winamp] removed winamp encoder
1992 [AudX] removed audx encoder
1991 [Snow] removed snow encoder
1990 [MainForm] cosmetic change

Changelog 1911 --> 1989

Main changes:
[One-Click] added the FFMSIndexer so that e.g. most AVI and MKV files are now supported.
            if the FFMSIndexer is used the audio track must be encoded and cannot be muxed only.
[VideoPlayer] starting preview size will match the screen resolution. Added also an option for 1:1 preview mode.
[FileIndexer] added demux option to the audio tracks when using FFMSIndex
              these audio tracks will be added to the main input tab if "on completion load files" is selected. Feature request #3158957
[M2TS Muxer] added Blu-ray and AVCHD device output types. Feature request #1982670
[AVI Muxer] added PC device output type which is unrestricted and corresponds to the old standard settings. 
            the new standard output type is now enhanced for standalone devices so that e.g. opendml is disabled and splitting enforced. Feature request #1951705
[Update] added update check for Nero AAC encoder

Other changes:
[Audio Encoder] downmix will be ignored if there are not more than 2 audio channels
[Audio Encoder] if AAC is detected FFAudioSource() will be used if possible
[Audio Jobs] audio encoding job can be added without existing input file
[Audio Jobs] update elapsed time while preprocessing
[AutoEncode] zone handling added so that Intro and Credit selection in the video preview window will be respected
[AVI Muxer] + [M2TS Muxer] added mux script file content to the log
[AVS Cutter] update start/end frame when a section is clicked. Feature request #1660341
[AVS Script Creator] new video player will be started with previewing the middle of the video in 1:1 mode
[AVS Script Creator] while cropping VideoPlayer preview moves to the cropping border
[Chapter Creator] + [AVS Cutter] VideoPlayer preview respects the "always on top" setting